resources/sass/main.scss
/* ... */
.sidebar.is-open ~ .sidebar-backdrop {
  opacity: 1;
  pointer-events: auto;

  @include media-breakpoint-up(md) {
    display: none;
  }
}

/*
    Logo
*/
.logo {
  padding-left: 0.5rem;
  padding-right: 0.5rem;

  @include media-breakpoint-up(md) {
    padding-left: 1rem;
    padding-right: 1rem;
    margin-left: -1rem;
  }
}
/*
    Navigation
*/
.navigation__item,
.navigation__item:hover,
.navigation__item:focus {
  color: $page-text-color;
}

.navigation__item {
  background-color: transparent;
  border: none;
  padding: 0.5rem 2rem 0.5rem $sidebar-left-pad;
  font-size: 1.2rem;
}

.navigation__item:not(.active):hover,
.navigation__item:not(.active):focus {
  background-color: $page-bg;

  @include media-breakpoint-up(md) {
    background-color: $contrast1;
  }
}

.navigation__item:focus-visible {
  outline: 0;
  box-shadow: $input-btn-focus-box-shadow;
}

.navigation__item.active,
.navigation__item.active:hover,
.navigation__item.active:focus {
  color: #000;
}

/*
    Main page content
*/
.main {
  position: relative;
  margin-left: 0;

  @include media-breakpoint-up(md) {
    margin-left: calc(#{$sidebar-width} + #{$sidebar-gap});
  }
}

/*
    Menu button
*/
.btn-menu {
  box-sizing: content-box;
  width: $btn-close-width;
  height: $btn-close-height;
  padding: $btn-close-padding-y $btn-close-padding-x;
  color: $btn-close-color;
  background: transparent
    escape-svg(
      url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$btn-close-color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>')
    )
    50% 50% no-repeat; // include transparent for button elements
  border: 0; // for button elements
  @include border-radius();
  opacity: $btn-close-opacity;

  // Override <a>'s hover style
  &:hover,
  &:focus {
    color: $btn-close-color;
    text-decoration: none;
    opacity: $btn-close-hover-opacity;
  }

  &:focus-visible {
    outline: 0;
    box-shadow: $btn-close-focus-shadow;
    opacity: $btn-close-focus-opacity;
  }

  &:disabled,
  &.disabled {
    pointer-events: none;
    user-select: none;
    opacity: $btn-close-disabled-opacity;
  }
}

/*
  Improve touch hit area for standalone checkboxes/radios.
  For this `.form-check` element should be a `<label>`
*/
.form-check_standalone {
  position: relative;
  display: inline-block;
  padding: 0;
  min-height: 0;
  margin: 0;
  vertical-align: baseline;
}
.form-check_standalone::before {
  content: '';
  position: absolute;
  width: 44px;
  height: 44px;
  left: 50%;
  // .25em is default bootstrap margin-top for `.form-check-input` which allows vertical aligning with text
  top: calc(50% + (0.25em / 2));
  transform: translate(-50%, -50%);
}
.form-check_standalone > .form-check-input {
  margin-left: 0;
  margin-right: 0;
}

/*
  Gallery
*/

.pig-figure {
  background-color: $contrast1 !important;
  cursor: pointer;
}

/*
  Toolbar for detailed views (image view, family images view)
*/

$toolbar-height: $header-height;
$toolbar-y-pad: $header-y-pad;
$toolbar-show-specific-actions-bp: 440px;
$toolbar-action-sections-gap: .5rem;

.toolbar {
  position: fixed;
  z-index: $header-z-index;
  left: 0;
  right: 0;
  top: 0;
  display: flex;
  flex-grow: 0;
  height: $toolbar-height;
  padding: $toolbar-y-pad $main-x-pad;
  background: $page-bg;
  white-space: nowrap;
}

.toolbar__main,
.toolbar__aside {
  flex-grow: 0;
}
.toolbar__main {
  margin-left: calc(-1 * #{$main-x-pad});

  @media (min-width: $toolbar-roomy-bp) {
    margin-left: 0;
  }
}
.toolbar__aside {
  display: flex;
  flex-wrap: nowrap;
  margin-left: auto;
  white-space: nowrap;

  margin-right: calc(-1 * #{$main-x-pad});

  @media (min-width: $toolbar-roomy-bp) {
    margin-right: 0;
  }
}

.toolbar__specific-actions {
  padding-right: math.div($toolbar-action-sections-gap, 2.5);

  @media (min-width: $toolbar-roomy-bp) {
    padding-right: $toolbar-action-sections-gap;
  }
}
.toolbar__main-actions {
  border-left: 1px solid $contrast2;
  padding-left: math.div($toolbar-action-sections-gap, 2.5);

  @media (min-width: $toolbar-roomy-bp) {
    padding-left: $toolbar-action-sections-gap;
  }
}

.toolbar__specific-actions-more {
  display: none;

  @media (min-width: $toolbar-show-specific-actions-bp) {
    display: inline;
  }
}
.toolbar__specific-actions-toggle,
.toolbar__specific-actions-toggle + label {
  display: inline-block;

  @media (min-width: $toolbar-show-specific-actions-bp) {
    display: none;
  }
}
.toggler:checked ~ .toolbar__specific-actions-more {
  display: inline;
}

.toolbar + .content {
  padding-top: calc(#{$toolbar-height} + .5rem);

  @include media-breakpoint-up(md) {
    padding-top: calc(#{$toolbar-height} + 1rem);
  }
}

/*
  Toggler.
  (a self-toggling "button" based on a checkbox)
*/
.toggler__icon-close,
.toggler:checked + label .toggler__icon-open {
  display: none;
}

.toggler:checked ~ .toolbar__specific-actions-more,
.toggler:checked + label .toggler__icon-close {
  display: inline;
}

/*
  Selected items toolbar
*/
$selected-toolbar-transition-duration: .2s;

.selected-toolbar {
  @include main-header-styles;

  z-index: $selected-toolbar-z-index;
  transform: translateY(-100%);
  transition: visibility $sidebar-animation-duration, transform $selected-toolbar-transition-duration;
  will-change: transform, visibility;
  visibility: hidden;
}
.selected-toolbar.is-visible {
  visibility: visible;
  transform: translateY(0);
}

.selected-toolbar__unselect.btn-lg {
  padding-top: .25rem;
  padding-bottom: .25rem;
}
.selected-toolbar__unselect > .bi {
  margin-top: -.22em;
}


.selected-toolbar + .header,
.selected-toolbar + .toolbar {
  visibility: visible;
  transition: visibility $sidebar-animation-duration;
  will-change: visibility;
}
/* ... */

